# litedocs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
docs/: CONVENTIONS.md  DESIGN.md  REQUIEMENT.md  TASKS.md
litedocs/: __init__.py  __main__.py  cli.py  config.py  models.py  parser.py  process.py  renderer.py  scaffold.py  scanner.py  search.py  seo.py  server.py  watcher.py
litedocs-docs/: config.json
litedocs-docs/en/: _nav.md  _sidebar.md  index.md
litedocs-docs/en/development/: _sidebar.md  architecture.md  index.md  local-setup.md  testing.md  theme-system.md
litedocs-docs/en/guide/: configuration.md  folder-structure.md  index.md  multi-doc.md  quick-start.md  themes.md
litedocs-docs/en/reference/: cli.md  config.md  index.md
litedocs-docs/zh/: _nav.md  _sidebar.md  index.md
litedocs-docs/zh/development/: _sidebar.md  architecture.md  index.md  local-setup.md  testing.md  theme-system.md
litedocs-docs/zh/guide/: configuration.md  folder-structure.md  index.md  multi-doc.md  quick-start.md  themes.md
litedocs-docs/zh/reference/: cli.md  config.md  index.md
litedocs/themes/: __init__.py
litedocs/themes/default/: theme.json
litedocs/themes/default/templates/: base.html
tests/: conftest.py  test_cli_commands.py  test_config.py  test_parser.py  test_process.py  test_scaffold.py  test_scanner.py  test_search.py  test_seo.py  test_server.py
tests/fixtures/sample-docs/: config.json
tests/fixtures/sample-docs/en/: _nav.md  _sidebar.md  index.md  (+1 more)
(+33 files in other folders)
